--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,17 @@
-/* body {
-  width: 100%;
+*,
+::after,
+::before{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-} */
+  padding: 0;
+  box-sizing: border-box;
+}
 
-Primary {
+body {
+  font-size: 0.875rem;
+  font-family: 'Montserrat', sans-serif;
+}
+
+Colors {
 color : hsl(158, 36%, 37%);
 color: hsl(30, 38%, 92%);
 color: hsl(212, 21%, 14%);
@@ -16,25 +19,16 @@ color: hsl(228, 12%, 48%);
 color: hsl(0, 0%, 100%)
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 main{
   width: 100%;
   height: 100vh;
   display: grid;
   place-items: center;
-  background-color: hsl(228, 12%, 48%);
+  background-color: hsl(30, 38%, 92%);
 }
 
-.main-section{
-  width: 22rem;
-  border: 1px solid purple;
-  background-color: hsl(30, 38%, 92%);
-  padding: 1rem;
+.section-center{
+  width: 80vw;
 }
 
 .preview-card{
@@ -45,10 +39,10 @@ main{
 
 .hero{
   width: 100%;
-  height: 15rem;
+  height: 35vh;
   border-top-left-radius: .5rem;
   border-top-right-radius: .5rem;
-  background-color: hsl(158, 36%, 37%);
+  background: url("./images/image-product-mobile.jpg") top center/cover no-repeat;
 }
 
 .card-content{
@@ -59,54 +53,209 @@ main{
   font-size: .8rem;
   color: hsl(228, 12%, 48%);
   text-transform: uppercase;
-  letter-spacing: 2pt;
+  letter-spacing: 3pt;
   margin: .7rem 0;
+  font-weight: 500;
 }
 
 .card-content h1{
-  font-size: 2rem;
-  /* font-weight: 900; */
-  line-height: 30px;
+  font-size: 1.8rem;
+  font-family: 'Fraunces', serif;
+  font-weight: 700;
+  line-height: 1.875rem;
   color: hsl(212, 21%, 14%);
   margin-bottom: .7rem;
 }
 
 .card-content article{
-
+  font-size: .8rem;
+  line-height: 1.3rem;
+  color: hsl(228, 12%, 48%);
 }
 
 .price{
-  margin-top: 1.5rem;
+  margin-top: 1.3rem;
 }
 
 .new-price{
-  font-size: 1.8rem;
-  
+  color: hsl(158, 36%, 37%);
+  margin-right: .5rem;
+  font-size: 1.5rem;
+  font-family: 'Fraunces', serif;
 }
 
 .previous-price{
+  color: hsl(228, 12%, 48%);
   text-decoration: line-through;
 }
 
 .cart-btn{
-  color:hsl(0, 0%, 100%);
   width: 100%;
-  padding: .3rem;
-  border-radius: .6rem;
+  padding: .5rem;
+  border-radius: .5rem;
   border: none;
   display: flex;
+  gap: .5rem;
   margin-top: 1rem;
   align-items: center;
   justify-content: center;
+  color:hsl(0, 0%, 100%);
   background-color: hsl(158, 36%, 37%);
+  transition: all .5s linear;
 }
 
-.cart-logo{
-
+.cart-btn:hover{
+  background-color: hsl(159, 91%, 9%);
 }
 
-.cart-text{
-
+.cart-btn-text{
+  font-family: 'Montserrat', sans-serif;
 }
 
+@media screen and (min-width: 768px) {
+  .preview-card{
+    border-radius: .8rem;
+  }
+  
+  .hero{
+    border-top-left-radius: .8rem;
+    border-top-right-radius: .8rem;
+  }
+  
+  .card-content{
+    padding: 1.5rem;
+  }
+  
+  .card-content h3{
+    font-size: 1.2rem;
+    letter-spacing: 4pt;
+    margin: 1rem 0;
+  }
+  
+  .card-content h1{
+    font-size: 4rem;
+    line-height: 4rem;
+    margin-bottom: 1rem;
+  }
+  
+  .card-content article{
+    font-size: 1.6rem;
+    line-height: 2.5rem;
+  }
+  
+  .new-price{
+    font-size: 2.5rem;
+  }
+  
+  .previous-price{
+    font-size: 1.5rem;
+  }
+  
+  .cart-btn{
+    font-size: 1.2rem;
+    padding: .8rem;
+  } 
+}
+
+@media screen and (min-width: 992px){
+  .section-center{
+    width: 60vw;
+  }
+  
+  .preview-card{
+    height: 80vh;
+    display: flex;
+    border-radius: 1rem;
+  }
+  
+  .hero{
+    width: 50%;
+    height: 100%;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 1rem;
+    background: url("./images/image-product-desktop.jpg") top center/cover no-repeat;
+  }
+  
+  .card-content{
+    width: 50%;
+    padding: 2.5rem;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .card-content h3{
+    font-size: .8rem;
+    margin: .7rem 0 1rem;
+  }
+  
+  .card-content h1{
+    font-size: 2.8rem;
+    line-height: 2.8rem;
+    margin-bottom: .8rem;
+  }
+  
+  .card-content article{
+    font-size: 1.2rem;
+    line-height: 1.8rem;
+  }
+
+  .price{
+    margin: 1rem 0 1.2rem;
+  }
+  
+  .new-price{
+    font-size: 2rem;
+  }
+  
+  .previous-price{
+    font-size: 1rem;
+  }
+  
+  .cart-btn{
+    font-size: 1rem;
+    padding: .5rem;
+  } 
+}
+
+@media screen and (min-width: 1440px){
+  .section-center{
+    width: 70vw;
+  }
+
+  .card-content h3{
+    font-size: 1.4rem;
+    margin: 1rem 0 2rem;
+  }
+  
+  .card-content h1{
+    font-size: 4rem;
+    line-height: 4rem;
+    margin-bottom: 1.5rem;
+  }
+  
+  .card-content article{
+    font-size: 1.7rem;
+    line-height: 2.8rem;
+  }
+
+  .price{
+    margin: 2.5rem 0;
+  }
+  
+  .new-price{
+    font-size: 3.5rem;
+  }
+  
+  .previous-price{
+    font-size: 1.5rem;
+  }
+  
+  .cart-btn{
+    font-size: 1.2rem;
+    padding: 1rem;
+  } 
+}
 
